vite-dev.err.log
[2m12:53:12[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] Failed to reload /src/App.jsx. This could be due to syntax errors or importing non-existent modules. (see errors above)
[2m12:53:12[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] Failed to reload /src/App.jsx. This could be due to syntax errors or importing non-existent modules. (see errors above)
[2m12:53:12[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] Failed to reload /src/App.jsx. This could be due to syntax errors or importing non-existent modules. (see errors above)
[2m12:53:35[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] Failed to reload /src/App.css. This could be due to syntax errors or importing non-existent modules. (see errors above)
[2m12:53:35[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] Failed to reload /src/App.css. This could be due to syntax errors or importing non-existent modules. (see errors above)
[2m12:53:35[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] Failed to reload /src/App.css. This could be due to syntax errors or importing non-existent modules. (see errors above)
[2m12:54:03[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m Pre-transform error: Failed to load url /src/App.css (resolved id: C:/Users/rnbirck/PROJETOS/DASHBOARD-PNE-REACT/src/App.css) in C:/Users/rnbirck/PROJETOS/DASHBOARD-PNE-REACT/src/App.jsx. Does the file exist?
[2m13:06:18[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] SyntaxError: The requested module '/src/data/staticData.js?t=1781366778518' does not provide an export named 'loadCycleRankings'
[2m13:06:18[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] Failed to reload /src/pages/CyclePage.jsx. This could be due to syntax errors or importing non-existent modules. (see errors above)
[2m13:06:18[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] SyntaxError: The requested module '/src/data/staticData.js?t=1781366778518' does not provide an export named 'loadCycleRankings'
[2m13:06:18[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] Failed to reload /src/App.jsx. This could be due to syntax errors or importing non-existent modules. (see errors above)
[2m13:06:18[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] SyntaxError: The requested module '/src/data/staticData.js?t=1781366778518' does not provide an export named 'loadDiagnostico'
[2m13:06:18[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] Failed to reload /src/pages/Diagnostico.jsx. This could be due to syntax errors or importing non-existent modules. (see errors above)
[2m13:06:18[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] SyntaxError: The requested module '/src/data/staticData.js?t=1781366778518' does not provide an export named 'loadDiagnostico'
[2m13:06:18[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] Failed to reload /src/pages/Diagnostico.jsx. This could be due to syntax errors or importing non-existent modules. (see errors above)
[2m13:06:18[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] SyntaxError: The requested module '/src/data/staticData.js?t=1781366778518' does not provide an export named 'loadCycleRankings'
[2m13:06:18[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] Failed to reload /src/pages/CyclePage.jsx. This could be due to syntax errors or importing non-existent modules. (see errors above)
[2m13:06:18[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] SyntaxError: The requested module '/src/data/staticData.js?t=1781366778518' does not provide an export named 'loadCycleRankings'
[2m13:06:18[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] Failed to reload /src/App.jsx. This could be due to syntax errors or importing non-existent modules. (see errors above)
[2m13:07:09[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] SyntaxError: The requested module '/src/data/staticData.js?t=1781366778518' does not provide an export named 'loadCycleRankings'
[2m13:07:09[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] Failed to reload /src/App.jsx. This could be due to syntax errors or importing non-existent modules. (see errors above)
[2m13:07:09[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] SyntaxError: The requested module '/src/data/staticData.js?t=1781366778518' does not provide an export named 'loadCycleRankings'
[2m13:07:09[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] Failed to reload /src/App.jsx. This could be due to syntax errors or importing non-existent modules. (see errors above)
[2m13:23:34[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [31m[Unhandled error] [1mTypeError[22m: Cannot read properties of undefined (reading 'toLocaleString')
[39m > Layout src/components/Layout.jsx:36:73
    34 |  
    35 |          <section className="top-stat-grid" aria-label="Resumo do dashboard">
    36 |            <StatCard label="Municípios monitorados" value={municipioCount.toLocaleString('pt-BR')} />
       |                                                                           ^
    37 |            <StatCard label="Município selecionado" value={selectedMunicipio} tone="accent" />
    38 |            <StatCard label="Ciclos avaliados" value={cycleCount} />
 > Object.react_stack_bottom_frame node_modules/react-dom/cjs/react-dom-client.development.js:25904:19
 > renderWithHooks node_modules/react-dom/cjs/react-dom-client.development.js:7662:21
 > updateFunctionComponent node_modules/react-dom/cjs/react-dom-client.development.js:10166:18
 > beginWork node_modules/react-dom/cjs/react-dom-client.development.js:11778:17
 > runWithFiberInDEV node_modules/react-dom/cjs/react-dom-client.development.js:871:29
 > performUnitOfWork node_modules/react-dom/cjs/react-dom-client.development.js:17641:21
 > workLoopSync node_modules/react-dom/cjs/react-dom-client.development.js:17469:40
 > renderRootSync node_modules/react-dom/cjs/react-dom-client.development.js:17450:10
 > performWorkOnRoot node_modules/react-dom/cjs/react-dom-client.development.js:16583:34

[2m13:23:34[22m [33m[1m[vite][22m[39m [33m[2m(client)[22m[39m [2m[console.warn] [22mAn error occurred in the <Layout> component.

Consider adding an error boundary to your tree to customize error handling behavior.
Visit https://react.dev/link/error-boundaries to learn more about error boundaries.

[2m13:23:34[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [31m[Unhandled error] [1mTypeError[22m: Cannot read properties of undefined (reading 'toLocaleString')
[39m > Layout src/components/Layout.jsx:36:73
    34 |  
    35 |          <section className="top-stat-grid" aria-label="Resumo do dashboard">
    36 |            <StatCard label="Municípios monitorados" value={municipioCount.toLocaleString('pt-BR')} />
       |                                                                           ^
    37 |            <StatCard label="Município selecionado" value={selectedMunicipio} tone="accent" />
    38 |            <StatCard label="Ciclos avaliados" value={cycleCount} />
 > Object.react_stack_bottom_frame node_modules/react-dom/cjs/react-dom-client.development.js:25904:19
 > renderWithHooks node_modules/react-dom/cjs/react-dom-client.development.js:7662:21
 > updateFunctionComponent node_modules/react-dom/cjs/react-dom-client.development.js:10166:18
 > beginWork node_modules/react-dom/cjs/react-dom-client.development.js:11778:17
 > runWithFiberInDEV node_modules/react-dom/cjs/react-dom-client.development.js:871:29
 > performUnitOfWork node_modules/react-dom/cjs/react-dom-client.development.js:17641:21
 > workLoopSync node_modules/react-dom/cjs/react-dom-client.development.js:17469:40
 > renderRootSync node_modules/react-dom/cjs/react-dom-client.development.js:17450:10
 > performWorkOnRoot node_modules/react-dom/cjs/react-dom-client.development.js:16583:34

[2m13:23:34[22m [33m[1m[vite][22m[39m [33m[2m(client)[22m[39m [2m[console.warn] [22mAn error occurred in the <Layout> component.

Consider adding an error boundary to your tree to customize error handling behavior.
Visit https://react.dev/link/error-boundaries to learn more about error boundaries.

